--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ export DB_VIRTUOSO_PATH="/path/to/virtuoso-db"
 
 # Needed for docker-compose.yml
 export DB_VIRTUOSO_HTTP_PORT="8890"
+
+# Needed for db-fuseki/
+export DB_FUSEKI_HTTP_PORT="8080"
