Add Nginx reverse proxy configuration

--- a/.env.example
+++ b/.env.example
@@ -11,5 +11,8 @@ export DB_VIRTUOSO_PATH=/path/to/virtuoso-db
 # Needed for docker-compose.yml
 export DB_VIRTUOSO_HTTP_PORT=8890
 
+# Needed for docker-compose.yml
+export NGINX_REVERSE_PROXY_HTTP_PORT=8900
+
 # Needed for db-fuseki/
 export DB_FUSEKI_HTTP_PORT=8080
