--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,3 +20,9 @@ services:
     ports:
       - "1111:1111"
       - "${DB_VIRTUOSO_HTTP_PORT:-8890}:8890"
+  reverse-proxy:
+    image: nginx:1-alpine
+    volumes:
+      - ./db-virtuoso/nginx/reverse_proxy.conf:/etc/nginx/conf.d/default.conf
+    ports:
+      - "${NGINX_REVERSE_PROXY_HTTP_PORT:-8900}:8080"
