--- a/db-virtuoso/nginx/reverse_proxy.conf
+++ b/db-virtuoso/nginx/reverse_proxy.conf
@@ -16,9 +16,17 @@ server {
 	listen 8080;
 	listen [::]:8080;
 
+	proxy_connect_timeout       300s;
+	proxy_send_timeout          300s;
+	proxy_read_timeout          300s;
+	send_timeout                300s;
+
 	server_name okg-virtuoso.biobricks.ai;
 
 	location / {
+		proxy_http_version 1.1;
+		proxy_set_header Connection "";
+
 		proxy_set_header        Host            $http_host;
 		proxy_set_header        X-Real-IP       $remote_addr;
 		proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
