Mark more files as generated

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 fuseki_config.ttl  -diff linguist-generated=true
+puml/*.puml        -diff linguist-generated=true
+stages/*.rml.ttl   -diff linguist-generated=true
