Virtuoso: add setting to increase memory buffers
Needed for loading large datasets in a reasonable amount of time.

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,8 @@ export DB_VIRTUOSO_PATH=/path/to/virtuoso-db
 
 # Needed for docker-compose.yml
 export DB_VIRTUOSO_HTTP_PORT=8890
+export DB_VIRTUOSO_Parameters_NumberOfBuffers=10000
+export DB_VIRTUOSO_Parameters_MaxDirtyBuffers=6000
 
 # Needed for docker-compose.yml
 export NGINX_REVERSE_PROXY_HTTP_PORT=8900
