fix(docker): Only append path separator + variable if non-empty

--- a/db-virtuoso/Dockerfile
+++ b/db-virtuoso/Dockerfile
@@ -18,8 +18,8 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 	$APT_PKGS_RUN
 
 COPY --from=hdt-cpp /app /hdt-cpp
-ENV LD_LIBRARY_PATH=/hdt-cpp/lib:$LD_LIBRARY_PATH
-ENV PATH=/hdt-cpp/bin:$PATH
+ENV LD_LIBRARY_PATH=/hdt-cpp/lib:${LD_LIBRARY_PATH:+:$LD_LIBRARY_PATH}
+ENV PATH=/hdt-cpp/bin:${PATH:+:$PATH}
 
 FROM db AS tester
 ARG APT_PKGS_TEST
