build(dvc): Enabling pushing of the N-Triples in `raw/`

--- a/dvc.yaml
+++ b/dvc.yaml
@@ -38,8 +38,7 @@ stages:
       - stages/tox21.rml.ttl
       - stages/toxcast.rml.ttl
     outs:
-      - raw:
-          push: false
+      - raw
   build:
     cmd: stages/03_build.sh
     deps:
